# stobot

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile_alpine
src/: arc_api.rs  handler.rs  main.rs  news.rs
