[package]
name = "stobot"
version = "0.10.1"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.7"
serde = "~1.0"
serde-aux = "4.5.0"
serde_json = "~1.0"
regex = "~1.10"
chrono = "~0.4"
chrono-tz = "0.9.0"
scraper = "0.18"

[dependencies.clap]
version = "4.5.16"
features = ["derive"]

#[dependencies.openssl]
#version = "0.10"
#features = ["vendored"]

[dependencies.serenity]
version = "=0.12.1"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "cache", "http"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "signal"]
